# quickwit-alt-ui

./: .gitignore  Cargo.toml  Dioxus.toml  build.rs  devenv.nix  flake.nix  index.html  quickwit.nix  rustc-ice-2025-09-28T13_57_11-1472260.txt  rustc-ice-2025-09-28T15_52_22-3319066.txt  vector.yaml
.cargo/: config.toml
.github/workflows/: push-to-cachix.yml
assets/: .ignore  dx-components-theme.css  styles.css
src/: icons.rs  indexes.rs  main.rs
src/query_editor/: index_selector.rs  mod.rs
src/query_editor/time_range_select/: mod.rs
src/quickwit/: cluster.rs  index.rs  indexing.rs  mod.rs  query.rs
