[package]
name = "quickwit-alt-ui"
version = "0.1.0"
authors = ["unixpariah <100892812+unixpariah@users.noreply.github.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
dioxus = { version = "0.6.3", features = ["web", "router"] }
dioxus-autofmt = "0.6.2"
dioxus-logger = "0.5.1"
dioxus-rsx-rosetta = "0.6.2"
dioxus-sdk = { version = "0.6.0", features = ["timing"] }
gloo-timers = "0.3.0"
num-format = "0.4.4"
reqwasm = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.145"
url = "2.5.7"
urlencoding = "2.1.3"
wasm-bindgen = "=0.2.100"
web-sys = "=0.3.77"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
